tests/reference/run-implied_do_loop2-a8638e0.stderr
semantic error: The loop variable 'i' is not declared
 --> tests/implied_do_loop2.f90:5:12
  |
5 |   print *, (s, i = 1, 3)
  |            ^^^^^^^^^^^^^ 
